objects/Survey_Result_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Actual__c</fullName>
        <label>Actual</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Question__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Survey Question</label>
        <referenceTo>Survey_Question__c</referenceTo>
        <relationshipLabel>Survey Results Detail</relationshipLabel>
        <relationshipName>Survey_Results_Detail</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Result__c</fullName>
        <label>Survey Result</label>
        <referenceTo>Survey_Result__c</referenceTo>
        <relationshipLabel>Survey Results Detail</relationshipLabel>
        <relationshipName>Survey_Results_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <formula>Survey_Question__r.Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target</label>
        <type>Text</type>
    </fields>
    <label>Survey Result Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Survey Result Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Results Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>